--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,15 @@
             "database": "productConcept",
             "username": "root",
             "askForPassword": true
+        },
+        {
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 5432,
+            "driver": "PostgreSQL",
+            "name": "chat",
+            "database": "chat",
+            "username": "postgres"
         }
     ]
 }
