--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --experimental-specifier-resolution=node index.js"
+    "start": "nodemon --experimental-specifier-resolution=node index.js",
+    "seed": "node --experimental-specifier-resolution=node src/database/seed.js"
   },
   "author": "",
   "license": "ISC",
