--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --experimental-specifier-resolution=node index.js",
+    "migrate": "node --experimental-specifier-resolution=node src/database/migrate.js",
     "seed": "node --experimental-specifier-resolution=node src/database/seed.js"
   },
   "author": "",
@@ -22,6 +23,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
+    "postgrator": "^8.0.0",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.24.1",
     "zod-validation-error": "^3.4.0"
