--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 # server
-NODE_ENV= dev
+NODE_ENV= development
 API_HOST=localhost
 API_PORT=8000
 # database
@@ -8,3 +8,5 @@ DB_USER= postgres
 DB_PASSWORD= Root@3
 DB_NAME= chat
 DB_PORT= 5432
+# auth
+JWT_SECRET= secret123456789
