--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --experimental-specifier-resolution=node index.js",
     "migrate": "node --experimental-specifier-resolution=node src/database/migrate.js",
-    "seed": "node --experimental-specifier-resolution=node src/database/seed.js"
+    "seed": "node --experimental-specifier-resolution=node src/database/seed/seed.js"
   },
   "author": "",
   "license": "ISC",
@@ -23,8 +23,8 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
-    "postgrator": "^8.0.0",
     "swagger-ui-express": "^5.0.1",
+    "umzug": "^3.8.2",
     "zod": "^3.24.1",
     "zod-validation-error": "^3.4.0"
   },
