--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "umzug": "^3.8.2",
-    "zod": "^3.24.1",
+    "zod": "^3.25.76",
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
